--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 			<link rel="stylesheet" href="./css/style.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
       <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
-	  	<script src="./js/script.js"></script>
+      <script src="./js/jquery-3.1.1.min.js"></script>
+      <script src="./js/script.js"></script>
+	  	<script src="./js/designJs/script.js"></script>
 	</head>
 	<body>
-		<header>
-			<nav>
-
-			</nav>
-		</header>
 		<div class='row no-margin headBar'>
       <div class="col-md-12 logo">
         <span class="ion-ios-pulse-strong"> Living</span>
-        <input class="search" />
+        <span class="ion-android-search"></span>
+        <input class="search" placeholder="Music, artist..."/>
+        <span class="smallMenu">
+          <span class="ion-navicon-round"></span>
+        </span>
       </div>
 		</div>
     <div class="row no-margin container-living">
