Add some meta in html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-	  	<title>Living</title>
+			<title>Living</title>
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+			<meta name="description" content="Living is a website music player with awesome design">
+			<meta name="keywords" content="music, player, audio">
+			<meta name="author" content="Maxence, William, Alexis, Yannick">
 			<link rel="stylesheet" href="./css/style.css">
       <link rel="stylesheet" href="css/lib/bootstrap.min.css" />
       <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
