Re-indent html, use efficient tag

--- a/index.html
+++ b/index.html
@@ -17,36 +17,36 @@
 	</head>
 	<body>
 		<div class='row no-margin headBar'>
-      		<div class="col-md-12 logo">
-        		<span class="ion-ios-pulse-strong"> Living</span>
-        		<span class="ion-android-search"></span>
-        		<input class="search" placeholder="Music, artist..."/>
-        		<span class="smallMenu">
-          		<span id='iconSmallMenu' class="ion-navicon-round"></span>
-        		</span>
-      		</div>
+			<div class="col-md-12 logo">
+		  		<span class="ion-ios-pulse-strong"> Living</span>
+		  		<span class="ion-android-search"></span>
+		  		<input class="search" placeholder="Music, artist..."/>
+		  		<span class="smallMenu">
+	    			<span id='iconSmallMenu' class="ion-navicon-round"></span>
+	  			</span>
+			</div>
 		</div>
-    	<div class="row no-margin container-living">
-	      	<nav class="col-md-2 control no-margin">
-	        	<span id="home" class="controlActive">
-	          		<label class='ion-home'>
-	          		Home
-	        	</span>
-	        	<span id="music">
-	          		<label class='ion-headphone'>
-	          		My Music
-	        	</span>
-	        	<span id="disc">
-	          	<label class='ion-disc'>
-	          	Discover
-	        	</span>
-	      	</nav>
+  	<div class="row no-margin container-living">
+    	<nav class="col-md-2 control no-margin">
+      	<span id="home" class="controlActive">
+        		<label class='ion-home'>
+        		Home
+      	</span>
+      	<span id="music">
+        		<label class='ion-headphone'>
+        		My Music
+      	</span>
+      	<span id="disc">
+        	<label class='ion-disc'>
+        	Discover
+      	</span>
+    	</nav>
 			<nav class="col-md-12 control-mobile">
 				<span id="homeSmall" class="ion-home controlActive">Home</span>
 				<span id="musicSmall" class='ion-headphone'>My Music</span>
 				<span id="discSmall" class='ion-disc'>Discover</span>
 			</nav>
-	      	<div class="col-md-10 main">
+    	<div class="col-md-10 main">
 				<h1 class='text-shadow'>Welcome on Living,<br> just listen to<br> your music and enjoy !</h1>
 				<div class="struc">
 					<span class="ion-headphone"></span>
@@ -58,8 +58,8 @@
 				</div>
 			</div>
 			<div class="col-md-10 myMusic">
-	        	<ul id="songs">
-	         		<li id="1" data-source="data/01_Different_World.mp3">
+      	<ul id="songs">
+       		<li id="1" data-source="data/01_Different_World.mp3">
 						<span class="ion-play"></span>
 						<label>Different World</label>
 					</li>
@@ -67,7 +67,7 @@
 						<span class="ion-play"></span>
 						<label>The Ides Of March</label>
 					</li>
-	          		<li id="3" data-source="data/02_Children_Of_The_Damned.mp3">
+      		<li id="3" data-source="data/02_Children_Of_The_Damned.mp3">
 						<span class="ion-play"></span>
 						<label>Children Of The Damned</label>
 					</li>
@@ -76,8 +76,8 @@
 			<div class="col-md-10 discover">
 				<h1 class='text-shadow'>Very sorry... <br> But it's really just a practical work :(</h1>
 			</div>
-    	</div>
-		<div class='wrapPlayer'>
+  	</div>
+		<footer class='wrapPlayer'>
 			<span id='container-bar'>
 				<span id="bar"></span>
 				<label id="cursor"></label>
@@ -85,8 +85,8 @@
 			<span class="ion-music-note"></span>
 			<h2 id="currentSong">No song played.</h2>
 			<audio src="#" controls>
-			Votre navigateur ne gère pas l'élément <code>video</code>.
+				Votre navigateur ne gère pas l'élément <code>video</code>.
 			</audio>
-		</div>
+		</footer>
 	</body>
 </html>
