--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <script src="./js/designJs/script.js"></script>
 	</head>
 	<body>
-		<div class='row no-margin headBar'>
+		<header class='row no-margin headBar'>
 			<div class="col-md-12 logo">
 		  		<span class="ion-ios-pulse-strong"> Living</span>
 		  		<span class="ion-android-search"></span>
@@ -25,7 +25,7 @@
 	    			<span id='iconSmallMenu' class="ion-navicon-round"></span>
 	  			</span>
 			</div>
-		</div>
+		</header>
   	<div class="row no-margin container-living">
     	<nav class="col-md-2 control no-margin">
       	<span id="home" class="controlActive">
