Modification for valid W3C HTML

--- a/index.html
+++ b/index.html
@@ -29,16 +29,13 @@
   	<div class="row no-margin container-living">
     	<nav class="col-md-2 control no-margin">
       	<span id="home" class="controlActive">
-        		<label class='ion-home'>
-        		Home
+        		<label class='ion-home'>Home</label>
       	</span>
       	<span id="music">
-        		<label class='ion-headphone'>
-        		My Music
+        		<label class='ion-headphone'>My Music</label>
       	</span>
       	<span id="disc">
-        	<label class='ion-disc'>
-        	Discover
+        	<label class='ion-disc'>Discover</label>
       	</span>
     	</nav>
 			<nav class="col-md-12 control-mobile">
