--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<meta name="author" content="Maxence, William, Alexis, Yannick">
 			<link rel="stylesheet" href="./css/style.css">
       <link rel="stylesheet" href="css/lib/bootstrap.min.css" />
-      <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+      <link rel="stylesheet" href="css/lib/ionicons.min.css" />
       <script type="text/javascript" src="js/lib/jquery-3.1.1.min.js"></script>
       <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
       <script type="text/javascript" src="js/script.js"></script>
