Add logo (fiveIcon)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 			<meta name="description" content="Living is a website music player with awesome design">
 			<meta name="keywords" content="music, player, audio">
 			<meta name="author" content="Maxence, William, Alexis, Yannick">
-			<link rel="stylesheet" href="./css/style.css">
+			<link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
+			<link rel="stylesheet" href="./css/style.css" />
       <link rel="stylesheet" href="css/lib/bootstrap.min.css" />
       <link rel="stylesheet" href="css/lib/ionicons.min.css" />
       <script type="text/javascript" src="js/lib/jquery-3.1.1.min.js"></script>
