--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <script type="text/javascript" src="js/lib/jquery-3.1.1.min.js"></script>
       <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
       <script type="text/javascript" src="js/script.js"></script>
+      <script type="text/javascript" src="js/loadMusic.js"></script>
       <script src="./js/designJs/script.js"></script>
 	</head>
 	<body>
@@ -36,15 +37,15 @@
         		<label class='ion-headphone'>My Music</label>
       	</span>
       	<span id="disc">
-        	<label class='ion-disc'>Discover</label>
+        	<label class='ion-disc'>Import song</label>
       	</span>
     	</nav>
 			<nav class="col-md-12 control-mobile">
 				<span id="homeSmall" class="ion-home controlActive">Home</span>
 				<span id="musicSmall" class='ion-headphone'>My Music</span>
-				<span id="discSmall" class='ion-disc'>Discover</span>
+				<span id="discSmall" class='ion-disc'>Import song</span>
 			</nav>
-    	<div class="col-md-10 main">
+    	<div class="col-md-10 col-xs-12 main">
 				<h1 class='text-shadow'>Welcome on Living,<br> just listen to<br> your music and enjoy !</h1>
 				<div class="struc">
 					<span class="ion-headphone"></span>
@@ -56,23 +57,17 @@
 				</div>
 			</div>
 			<div class="col-md-10 myMusic">
-      	<ul id="songs">
-       		<li id="1" data-source="data/01_Different_World.mp3">
-						<span class="ion-play"></span>
-						<label>Different World</label>
-					</li>
-					<li id="2" data-source="data/01_The_Ides_Of_March.mp3">
-						<span class="ion-play"></span>
-						<label>The Ides Of March</label>
-					</li>
-      		<li id="3" data-source="data/02_Children_Of_The_Damned.mp3">
-						<span class="ion-play"></span>
-						<label>Children Of The Damned</label>
-					</li>
-				</ul>
+				<h1>No soung :(</h1>
+				<h2>But you can import your music in Import song !<h2>
+				<ul id="songs"></ul>
 			</div>
 			<div class="col-md-10 discover">
-				<h1 class='text-shadow'>Very sorry... <br> But it's really just a practical work :(</h1>
+				<h1 class='text-shadow'>In this section, <br> you can import <br>your music</h1>
+				<div class="inputWrapper">
+					<span class="iconImport ion-ios-upload"></span>
+					<span id="messageImport">Import your song</span>
+					<input class="fileInput hiddenText" id="playerId" multiple type="file" accept="audio/*" />
+				</div>
 			</div>
   	</div>
 		<footer class='wrapPlayer'>
@@ -82,7 +77,7 @@
 			</span>
 			<span class="ion-music-note"></span>
 			<h2 id="currentSong">No song played.</h2>
-			<audio src="#" controls>
+			<audio controls>
 				Votre navigateur ne gère pas l'élément <code>video</code>.
 			</audio>
 		</footer>
