Load songs data from json file, modification research

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
       <link rel="stylesheet" href="css/lib/ionicons.min.css" />
       <script type="text/javascript" src="js/lib/jquery-3.1.1.min.js"></script>
       <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+      <script type="text/javascript" src="js/list_song.js"></script>
       <script type="text/javascript" src="js/script.js"></script>
       <script type="text/javascript" src="js/equalizer.js"></script>
       <script src="./js/designJs/script.js"></script>
 	</head>
 	<body>
-		<header class='row no-margin headBar'>
+		<header id="header-main" class='row no-margin headBar'>
 			<div class="col-md-12 logo">
 		  		<span class="ion-ios-pulse-strong"> Living</span>
 		  		<span class="ion-android-search"></span>
@@ -66,30 +67,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td data-source="data/01_Different_World.mp3" class="song-title">
-								<span class="icon-control ion-play"></span>
-								<span>Different World</span>
-							</td>
-							<td class="song-artist">Iron Maiden</td>
-							<td class="song-genre">Hard-Rock</td>
-						</tr>
-						<tr>
-							<td data-source="data/01_The_Ides_Of_March.mp3" class="song-title">
-								<span class="icon-control ion-play"></span>
-								<span>The Ides Of March</span>
-							</td>
-							<td class="song-artist">Iron Maiden</td>
-							<td class="song-genre">Hard-Rock</td>
-						</tr>
-						<tr>
-							<td data-source="data/02_Children_Of_The_Damned.mp3" class="song-title">
-								<span class="icon-control ion-play"></span>
-								<span>Children Of The Damned</span>
-							</td>
-							<td class="song-artist">Iron Maiden</td>
-							<td class="song-genre">Hard-Rock</td>
-						</tr>
 					</tbody>
 				</table>
 			</div>
