--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       	<span id="disc" class="change-view" data-target="#panel-discovery">
         	<label class='ion-disc'>Import song</label>
       	</span>
-				<div id="equalizer-modal" class="modal fade" role="dialog">
+				<div id="equalizer-modal" class="modal-custom" role="dialog">
 					<div class="modal-dialog">
 						<canvas id="equalizer"></canvas>
 					</div>
@@ -98,7 +98,6 @@
 			</span>
 			<span class="ion-music-note"></span>
 			<h2 id="currentSong">No song played.</h2>
-			<button type="button" name="equalizer" class="btn btn-info" data-toggle="modal" data-target="#equalizer-modal">Equalizer</button>
 			<audio id="audio-player" src="#" controls>
 				Your browsers is not compatible.
 			</audio>
