--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="col-md-10 home panel-display hide" id="panel-music">
 				<div id="NoMusic">
 					<h1 class="ion-volume-mute"> No sound.</h1>
-					<h2>You can import your music in Import song !<h2>
+					<h2>You can import your music in Import song !</h2>
 				</div>
 				<table>
 					<thead>
