Load equalizer.js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
 			<script type="text/javascript" src="js/script.js"></script>
 			<script type="text/javascript" src="js/list_song.js"></script>
-			<!-- <script type="text/javascript" src="js/equalizer.js"></script> -->
+			<script type="text/javascript" src="js/equalizer.js"></script>
 			<script src="./js/designJs/script.js"></script>
 			<script type="text/javascript" src="js/loadMusic.js"></script>
 	</head>
