Clean HTML for valid W3C

--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 				<div class="col-xs-6"><!-- player -->
 						<div id="playerGradient">
 				            <button id="playButton"><span class='ion-play'></span></button>
-				            <button id="pauseButton"><span class='ion-pause'></button><!-- / n'est pas afficher de base-->
-				            <button id="mutedButton"><span class='ion-volume-mute'></button></button>
-				            <button id="muteButton"><span class='ion-volume-high'></button></button><!-- / n'est pas afficher de base-->
+										<button id="mutedButton"><span class='ion-volume-mute'></span></button>
+				            <button id="pauseButton"><span class='ion-pause'></span></button><!-- / n'est pas afficher de base-->
+				            <button id="muteButton"><span class='ion-volume-high'></span></button><!-- / n'est pas afficher de base-->
 
 				                <!--<input type="range" id="seek" value="0" max=""/>-->
 												<div id="seek"></div>
 
-				            <button id="closeButton"><span class='ion-stop'></button><!-- / n'est pas afficher de base-->
+				            <button id="closeButton"><span class='ion-stop'></span></button><!-- / n'est pas afficher de base-->
 
 				        </div><!-- / player -->
 				</div><!-- / Container-->
